--- a/src/app/components/auth/account-settings/payments/payments.component.html
+++ b/src/app/components/auth/account-settings/payments/payments.component.html
@@ -204,7 +204,7 @@
                                                 </div>
                                             </div>
                                             <div class="primaryBtn">
-                                                <input type="checkbox" (change)="checkCardType($event)"> <span>Make  Primary Card</span>
+                                                <input type="checkbox" (change)="checkCardType($event)"> <span>Make  primary card</span>
                                             </div>
 
                                             <div class="saveWraper">
