--- a/src/app/components/auth/account-settings/addresses/addresses.component.css
+++ b/src/app/components/auth/account-settings/addresses/addresses.component.css
@@ -374,6 +374,20 @@ section.address-page .delete a {
     display: flex;
 }
 
+.emailbtns .cancles button.cancel-subscrp {
+    border: none;
+    border-radius: 30px;
+    width: 100%;
+    padding: 5px 33px;
+    background: transparent;
+    color: #cf3b2c;
+    text-transform: uppercase;
+}
+
+.emailbtns .cancles button.cancel-subscrp i {
+    margin-right: 9px;
+}
+
 @media (min-width: 992px) {
     .addressed .cityndState {
         width: 100%;
@@ -383,8 +397,11 @@ section.address-page .delete a {
     }
     section.address-page.grid-checkout .emailbtns {
         display: flex;
+        flex-direction: column;
+        max-width: 300px;
+        margin: 0 auto;
     }
     .addresses-page .cancles {
-        margin: 0px 12px;
+        margin: 12px 12px 0px;
     }
 }
