--- a/src/app/components/auth/account-settings/profile/profile.component.css
+++ b/src/app/components/auth/account-settings/profile/profile.component.css
@@ -64,7 +64,7 @@ section.account-page.grid-checkout small#emailHelp {
 }
 
 .enrollment-steps-5 .custom-control.custom-checkbox.mycheckbox {
-    margin-top: 3px;
+    margin-top: 0px;
 }
 
 section.account-page.grid-checkout .form-group.numbersection {
@@ -328,7 +328,7 @@ button.btn.btn-link.ng-star-inserted {
 
 .account-paged form input {
     height: 50px;
-    font-family: 'g-regular';
+    font-family: 'g-medium';
     color: gray;
 }
 
