--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -90,7 +90,7 @@
 
                         <ul [className]="flag ?  'subshow search-result' : ' subhide  search-result'">
                             <li class="productlist" *ngFor="let product of products | slice:0:15; let i=index">
-                                <a (click)="onselectProduct(product)">{{product.itemCode}}</a>
+                                <a (click)="onselectProduct(product)"><span class="img-small-prod"><img [src]="product.image_03" /></span>{{product.itemDescription}}</a>
                             </li>
                         </ul>
 
@@ -155,7 +155,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                                 <path id="Path_2015" data-name="Path 2015" d="M921.9,17.2a7.3,7.3,0,0,1-6-3.2c0-2,4-3.1,6-3.1s6,1.1,6,3.1A7.3,7.3,0,0,1,921.9,17.2Zm0-14.2a2.946,2.946,0,0,1,3,3,3,3,0,0,1-6,0A2.946,2.946,0,0,1,921.9,3Zm0-3a10,10,0,1,0,10,10A10.029,10.029,0,0,0,921.9,0Z" transform="translate(-911.9)" fill="#1cb1c5"/>
                                 </svg>
-                        </span> SIGN IN</a>
+                        </span> <span class="mobSign"> SIGN IN</span></a>
                     </li>
                     <!-- <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link" (click)="isMobileMenu= false;">Log out</a></li> -->
 
