--- a/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
+++ b/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
@@ -74,7 +74,8 @@
                                                         <tbody>
                                                             <tr *ngFor="let detail of item.details">
                                                                 <td style="width:40px;">
-                                                                    <img [src]="detail.reference1" />
+                                                                    <img src="/assets/product-ordered.png" />
+                                                                    <!-- <img [src]="detail.reference1" /> -->
                                                                 </td>
                                                                 <td>
                                                                     <!-- <div class="info-orders">(1) Pre & Pro Biotic Quick Melts 30-Count</div>
@@ -112,14 +113,14 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
+                                <a class="page-link"  aria-label="Previous">
                                     <i class="fa fa-angle-left"></i>
                                 </a>
                             </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link">1</a></li>
 
                             <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
+                                <a class="page-link" aria-label="Next">
                                     <i class="fa fa-angle-right"></i>
                                 </a>
                             </li>
