--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
@@ -992,8 +992,9 @@
                                                                                     Card Name is required</div>
                                                                             </div>
                                                                             <div class="req">
-                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
+                            
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-md-12">
@@ -1011,7 +1012,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="req">
-                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1027,6 +1028,9 @@
                                                                                 <div *ngIf="p.expiryMonth.errors.pattern">
                                                                                     Invalid Month</div>
                                                                             </div>
+                                                                            <div class="req">
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
+                                                                            </div>
                                                                             <div *ngIf="monthError" class="invalid-feedback-customclass">
                                                                                 <div *ngIf="monthError">Month is not valid
                                                                                 </div>
@@ -1041,6 +1045,9 @@
                                                                                 <div *ngIf="p.expiryYear?.errors.required">
                                                                                     Expiry Year is required</div>
                                                                             </div>
+                                                                            <div class="req">
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
+                                                                            </div>
                                                                             <div *ngIf="yearError" class="invalid-feedback-customclass">
                                                                                 <div *ngIf="yearError">Year is not valid
                                                                                 </div>
@@ -1050,13 +1057,14 @@
                                                                     </div>
                                                                     <div class="col-md-12">
                                                                         <div class="form-group">
-                                                                            <div class="req">
-                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
-                                                                            </div>
+                                                                          
                                                                             <input type="text" formControlName="cardCVV" placeholder="CVV" name="cardCVV" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardCVV?.errors }" />
                                                                             <div *ngIf="paymentSubmitted && p.cardCVV?.errors" class="invalid-feedback">
                                                                                 <div *ngIf="p.cardCVV?.errors.required">
                                                                                     card CVV is required</div>
+                                                                            </div>
+                                                                            <div class="req">
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1302,7 +1310,7 @@
                                     <div class="heading-step1">
                                         <h4>Today's Order</h4>
                                         <!-- <p>{{itemDescription}}</p> -->
-                                        <div class="content-card steps-inner today-order">
+                                        <!-- <div class="content-card steps-inner today-order">
                                             <table>
                                                 <tbody>
                                                     <tr>
@@ -1320,7 +1328,7 @@
                                                     </tr>
                                                 </tfoot>
                                             </table>
-                                        </div>
+                                        </div> -->
                                         <span class="arrow-stepp">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
                                                 viewBox="0 0 6.6 11.2">
