--- a/src/app/components/auth/account-settings/loyalty-points/loyalty-points.component.html
+++ b/src/app/components/auth/account-settings/loyalty-points/loyalty-points.component.html
@@ -36,14 +36,14 @@
                                         <nav aria-label="Page navigation example">
                                             <ul class="pagination">
                                                 <li class="page-item">
-                                                    <a class="page-link" href="#" aria-label="Previous">
+                                                    <a class="page-link" aria-label="Previous">
                                                         <i class="fa fa-angle-left"></i>
                                                     </a>
                                                 </li>
-                                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                                <li class="page-item"><a class="page-link" >1</a></li>
 
                                                 <li class="page-item">
-                                                    <a class="page-link" href="#" aria-label="Next">
+                                                    <a class="page-link" aria-label="Next">
                                                         <i class="fa fa-angle-right"></i>
                                                     </a>
                                                 </li>
