--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
@@ -549,11 +549,11 @@ p.doesdiv a {
 }
 
 button {
-    /* border-radius: 30px;
-    width: 100%; */
+     border-radius: 30px;
+    width: 100%; 
     background: transparent;
-    /* border: 1px solid #1cb1c5;
-    padding: 5px; */
+     border: 1px solid #1cb1c5;
+    padding: 5px; 
     border:none;
     color: #1cb1c5;
     text-transform: uppercase;
