--- a/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
+++ b/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
@@ -88,19 +88,15 @@
                                                     </table>
                                                 </div>
                                             </div>
-
                                         </div>
-
                                         <div class="emailbtns subscribe">
                                             <div class="trck-order editsubscribe">
-                                                <a href="#"> <button class="trck-order-btn">Edit Subscription</button></a>
+                                                 <button class="trck-order-btn" (click)="viewEditDetail(item.autoOrderID)">Edit Subscription</button>
                                             </div>
 
                                             <div class="view-invoice cancelsubscribe">
                                                 <a href="#"> <button class="cancel-subscrp"><i class="fa fa-trash"></i>Cancel Subscription</button></a>
                                             </div>
-
-
                                         </div>
 
                                     </ng-template>
